--- a/dashboard/src/static/mock/index.html
+++ b/dashboard/src/static/mock/index.html
@@ -32,8 +32,8 @@
         	<div class="row">
         		<span class="span4">
         			Cockpit: <span data-bind="text: statusCockpit()"></span> 
-        			<button class="btn" data-bind="click: startCockpit">Cockpit start</button>
-        			<button class="btn" data-bind="click: stopCockpit">Cockpit stop</button>
+        			<button class="btn" data-bind="click: startCockpit">Cockpit Running</button>
+        			<button class="btn" data-bind="click: stopCockpit">Cockpit Stopped</button>
         		</span>
         	</div>
 		</div>
