--- a/dashboard/src/plugins/99_software/public/upload/test/index.html
+++ b/dashboard/src/plugins/99_software/public/upload/test/index.html
@@ -1,33 +1,63 @@
-<div class="modal fade" id="software-dialog">
-  <div class="modal-header">
-    <h3>Current software versions</h3>
-  </div>
-  <div class="modal-body">
-    <span data-bind="css: { hidden: ! software.loading() }">Loding...</span>
-    <ul data-bind="foreach: software.packages, css: { hidden: software.loading() }">
-      <li>
-        <div>
-          <span data-bind="text: package"> </span>&nbsp;&dash;&nbsp;<span data-bind="text: version"> </span>
-        </div>
-      </li>
-    </ul>
+<!DOCTYPE HTML>
+<!--
+/*
+ * jQuery File Upload Plugin Test 9.0.0
+ * https://github.com/blueimp/jQuery-File-Upload
+ *
+ * Copyright 2010, Sebastian Tschan
+ * https://blueimp.net
+ *
+ * Licensed under the MIT license:
+ * http://www.opensource.org/licenses/MIT
+ */
+-->
+<html lang="en">
+<head>
+<!-- Force latest IE rendering engine or ChromeFrame if installed -->
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<![endif]-->
+<meta charset="utf-8">
+<title>jQuery File Upload Plugin Test</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="http://codeorigin.jquery.com/qunit/qunit-1.12.0.css">
+</head>
+<body>
+<h1 id="qunit-header">jQuery File Upload Plugin Test</h1>
+<h2 id="qunit-banner"></h2>
+<div id="qunit-testrunner-toolbar"></div>
+<h2 id="qunit-userAgent"></h2>
+<ol id="qunit-tests"></ol>
+<div id="qunit-fixture">
     <!-- The file upload form used as target for the file upload widget -->
-    <form id="fileupload" action="software/upload" method="POST" enctype="multipart/form-data">
+    <form id="fileupload" action="../server/php/" method="POST" enctype="multipart/form-data">
         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
-        <div class="row fileupload-buttonbar">
-            <div class="span4">
+       <div class="row fileupload-buttonbar">
+            <div class="col-lg-7">
                 <!-- The fileinput-button span is used to style the file input field as button -->
                 <span class="btn btn-success fileinput-button">
-                    <i class="glyphicon glyphicon-plus"></i>
-                    <span>Upload packages...</span>
+                    <i class="icon-plus icon-white"></i>
+                    <span>Add files...</span>
                     <input type="file" name="files[]" multiple>
                 </span>
+                <button type="submit" class="btn btn-primary start">
+                    <i class="icon-upload icon-white"></i>
+                    <span>Start upload</span>
+                </button>
+                <button type="reset" class="btn btn-warning cancel">
+                    <i class="icon-ban-circle icon-white"></i>
+                    <span>Cancel upload</span>
+                </button>
+                <button type="button" class="btn btn-danger delete">
+                    <i class="icon-trash icon-white"></i>
+                    <span>Delete</span>
+                </button>
+                <input type="checkbox" class="toggle">
+                <!-- The global file processing state -->
                 <span class="fileupload-process"></span>
             </div>
-        </div>
-        <div class="row">
             <!-- The global progress state -->
-            <div class="col-lg-5 fileupload-progress fade">
+            <div class="col-lg-5 fileupload-progress">
                 <!-- The global progress bar -->
                 <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar progress-bar-success" style="width:0%;"></div>
@@ -38,37 +68,12 @@
         </div>
         <!-- The table listing the files available for upload/download -->
         <table role="presentation" class="table table-striped"><tbody class="files"></tbody></table>
-
-        <div class="row fileupload-buttonbar">
-          <div class="span4">
-            <button type="submit" class="btn btn-primary start">
-                <i class="glyphicon glyphicon-upload"></i>
-                <span>Start upload</span>
-            </button>
-            <button type="reset" class="btn btn-warning cancel">
-                <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel upload</span>
-            </button>
-          </div>
-        </div>
-
-    </form> 
-
-    <h3>Installation result:</h3><br>
-    <span data-bind="text: software.installOutput"> </span>
-
-  </div>
-
-  <div class="modal-footer">
-    <a href="#" class="btn" data-bind="click: software.refresh">Refresh</a>
-    <a href="#" class="btn" data-toggle="modal" data-target="#software-dialog" data-bind="">Close</a>
-  </div>
+    </form>
 </div>
-
 <!-- The template to display files available for upload -->
 <script id="template-upload" type="text/x-tmpl">
 {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <tr class="template-upload fade">
+    <tr class="template-upload">
         <td>
             <span class="preview"></span>
         </td>
@@ -100,7 +105,7 @@
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
 {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <tr class="template-download fade">
+    <tr class="template-download">
         <td>
             <span class="preview">
                 {% if (file.thumbnailUrl) { %}
@@ -129,6 +134,7 @@
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Delete</span>
                 </button>
+                <input type="checkbox" name="delete" value="1" class="toggle">
             {% } else { %}
                 <button class="btn btn-warning cancel">
                     <i class="glyphicon glyphicon-ban-circle"></i>
@@ -139,61 +145,22 @@
     </tr>
 {% } %}
 </script>
-
-<script src="plugin/99_software/upload/js/jquery.iframe-transport.js"></script>
-<!-- The basic File Upload plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload.js"></script>
-<!-- The File Upload processing plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload-process.js"></script>
-<!-- The File Upload image preview & resize plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload-image.js"></script>
-<!-- The File Upload audio preview plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload-audio.js"></script>
-<!-- The File Upload video preview plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload-video.js"></script>
-<!-- The File Upload validation plugin -->
-<script src="plugin/99_software/upload/js/jquery.fileupload-validate.js"></script>
-<script src="plugin/99_software/upload/js/jquery.fileupload-ui.js"></script>
-<script>
-/*jslint unparam: true, regexp: true */
-/*global window, $ */
-
-
-
-$(function () {
-    'use strict';
-
-    // Initialize the jQuery File Upload widget:
-    $('#fileupload').fileupload({
-        disableImageResize: false,
-        // Uncomment the following to send cross-domain cookies:
-        //xhrFields: {withCredentials: true},
-        url: '/software/upload'
-    });
-
-    $('#fileupload').fileupload('option', {
-        url: '/software/upload',
-        // Enable image resizing, except for Android and Opera,
-        // which actually support image resizing, but fail to
-        // send Blob objects via XHR requests:
-        disableImageResize: /Android(?!.*Chrome)|Opera/
-            .test(window.navigator.userAgent),
-        maxFileSize: 5000000000,
-        acceptFileTypes: /(\.|\/)(deb)$/i
-    });
-
-    // Upload server status check for browsers with CORS support:
-    if ($.support.cors) {
-        $.ajax({
-            url: '/software/upload',
-            type: 'HEAD'
-        }).fail(function () {
-            $('<div class="alert alert-danger"/>')
-                .text('Upload server currently unavailable - ' +
-                        new Date())
-                .appendTo('#fileupload');
-        });
-    }
-});
-
-</script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="../js/vendor/jquery.ui.widget.js"></script>
+<script src="http://blueimp.github.io/JavaScript-Templates/js/tmpl.min.js"></script>
+<script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
+<script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+<script src="../js/jquery.iframe-transport.js"></script>
+<script src="../js/jquery.fileupload.js"></script>
+<script>window.testBasicWidget = $.blueimp.fileupload;</script>
+<script src="../js/jquery.fileupload-process.js"></script>
+<script src="../js/jquery.fileupload-image.js"></script>
+<script src="../js/jquery.fileupload-audio.js"></script>
+<script src="../js/jquery.fileupload-video.js"></script>
+<script src="../js/jquery.fileupload-validate.js"></script>
+<script src="../js/jquery.fileupload-ui.js"></script>
+<script>window.testUIWidget = $.blueimp.fileupload;</script>
+<script src="http://codeorigin.jquery.com/qunit/qunit-1.12.0.js"></script>
+<script src="test.js"></script>
+</body> 
+</html>
