Dialing in the diveprofile

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -55,6 +55,8 @@ function autoResize(id){
             scripts.push('../plugins/motor_diags/public/js/motor_diags.js');
            // scripts.push('../plugins/touchcontroller/public/js/gamecontroller.js');
             scripts.push('../plugins/touchcontroller/public/js/touchcontroller.js');
+            scripts.push('../plugins/diveprofile/public/js/diveprofile.js');
+
 
             var styles = [];
             styles.push('../plugins/touchcontroller/public/css/style.css');
