Tank Control added

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -46,7 +46,7 @@ function autoResize(id){
             scripts.push('../plugins/blackbox/public/js/blackbox.js');
             scripts.push('../plugins/capestatus/public/js/capestatus.js');
             scripts.push('../plugins/compass/public/js/compass.js');
-            scripts.push('../plugins/fpscounter/public/js/fpscounter.js');
+           // scripts.push('../plugins/fpscounter/public/js/fpscounter.js');
             scripts.push('../plugins/googletalk_ipregistration/public/js/googletalk_ipregistration.js');
             scripts.push('../plugins/horizon/public/js/horizon.js');
             scripts.push('../plugins/photocapture/public/js/photocapture.js');
@@ -56,6 +56,7 @@ function autoResize(id){
            // scripts.push('../plugins/touchcontroller/public/js/gamecontroller.js');
             scripts.push('../plugins/touchcontroller/public/js/touchcontroller.js');
             scripts.push('../plugins/diveprofile/public/js/diveprofile.js');
+            scripts.push('../plugins/tankcontrol/public/js/tankcontrol.js');
 
 
             var styles = [];
