--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -57,7 +57,7 @@ function autoResize(id){
             scripts.push('../plugins/touchcontroller/public/js/touchcontroller.js');
             scripts.push('../plugins/diveprofile/public/js/diveprofile.js');
             scripts.push('../plugins/tankcontrol/public/js/tankcontrol.js');
-
+            scripts.push('../plugins/flybywire/public/js/flybywire.js');
 
             var styles = [];
             styles.push('../plugins/touchcontroller/public/css/style.css');
