Abstract getting started into into a readme.

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -6,12 +6,7 @@
     <script type="text/javascript" src="js/libs/ejs_0.9_alpha_1_production.js"></script>
 
 </head>
-<!-- You need to run Google like this to make this test page work:
-OSX: /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --allow-file-access-from-files
-
-to simulate an socket.io message:
-simevents.status[0]({time: 134123111}) // where 0 is the index of the listener you want to make go
---><body>
+<body>
 <script type='text/javascript' id='lt_ws' src='http://localhost:49767/socket.io/lighttable/ws.js'></script>
 <script language="JavaScript">
 <!--
