--- a/src/plugins/motor_diags/public/diagpanel.html
+++ b/src/plugins/motor_diags/public/diagpanel.html
@@ -30,7 +30,7 @@
          </div>
          <label class="control-label" for="reverse-lift-thruster">
          <input type="checkbox" data-bind="checked: reverseLiftThruster" />
-         Reverse Verticle Thruster
+         Reverse Vertical Thruster
          </label>
       </div>
    </div>
