Adding persistency of plugin manager settings. still some work to be done

--- a/src/plugins/plugin-manager/public/settings.html
+++ b/src/plugins/plugin-manager/public/settings.html
@@ -3,7 +3,7 @@
     <ul data-bind="foreach: controlablePlugins">
         <li>
             <div>
-                <span data-bind="text: name">&nbsp;</span>
+                <span data-bind="text: viewName">&nbsp;</span>
                 <button type="button" class="btn btn-default btn-xs" data-bind="css: {disabled: isEnabled()}, click: $parent.enablePlugin, enabled: !isEnabled()">Enable</button>
                 <button type="button" class="btn btn-primary btn-xs" data-bind="css: {disabled: !isEnabled()}, click: $parent.disablePlugin, enabled: isEnabled()">Disable</button>
             </div>
