--- a/src/plugins/headsup-menu/public/headsup.html
+++ b/src/plugins/headsup-menu/public/headsup.html
@@ -1,6 +1,8 @@
 <div id="headsup-menu-container">
     <div class="heading">Heads-Up Menu</div>
-    <div class="menuRow active">Heading Hold</div>
-    <div class="menuRow">Depth Hold</div>
-    <div class="menuRow">Laser</div>
+    <div id="headsup-menu-items">
+        <div class="menuRow active">Heading Hold</div>
+        <div class="menuRow">Depth Hold</div>
+        <div class="menuRow">Laser</div>
+    </div>
 </div>
