Improve custom binding

--- a/src/plugins/headsup-menu/public/headsup.html
+++ b/src/plugins/headsup-menu/public/headsup.html
@@ -1,4 +1,5 @@
 <div id="headsup-menu-container">
+    <div id="headsup-menu-templates" />
     <div class="heading">Heads-Up Menu</div>
     <div id="headsup-menu-items">
         <ul class="unstyled" data-bind="foreach: items">
@@ -7,8 +8,8 @@
                     <button class="btn btn-large btn-block" data-bind="text: label, click: callback"></button>
                 </div>
                 <div class="menuRow" data-bind="if: type=='custom'">
-                    <script type="text/html" data-bind="attr: { id: 'custom' + $index }, html: content" />
-                    <div data-bind="template: { name: 'custom' + $index }" />
+                    <script type="text/html" data-bind="attr: { id: headsUpUniqueId }, html: content" />
+                    <div class="custom-block" data-bind="template: { name: headsUpUniqueId }" />
                 </div>
             </li>
         </ul>
