--- a/src/plugins/headsup-menu/public/headsup.html
+++ b/src/plugins/headsup-menu/public/headsup.html
@@ -4,18 +4,18 @@
 
         <script type="text/html" id="menuRow-button">
             <li>
-                <div class="menuRow">
+                <div class="menuRow" data-bind="attr: { id: $data.uniqueId }">
                     <button class="btn btn-large btn-block" data-bind="text: label, click: callback"></button>
                 </div>
             </li>
         </script>
         <script type="text/html" id="menuRow-custom">
             <li>
-                <div class="menuRow" >
+                <div class="menuRow"  data-bind="attr: { id: $data.uniqueId }">
                     <!-- create a template based on the custom content -->
-                    <script type="text/html" data-bind="attr: { id: $data.headsUpUniqueId }, html: content" />
+                    <script type="text/html" data-bind="attr: { id: $data.headsUpTemplateId }, html: content" />
                     <!-- reference the created template -->
-                    <div class="custom-block" data-bind="template: { name: $data.headsUpUniqueId }" />
+                    <div class="custom-block" data-bind="template: { name: $data.headsUpTemplateId }" />
                 </div>
             </li>
         </script>
