--- a/src/plugins/rovpilot/public/ui-templates.html
+++ b/src/plugins/rovpilot/public/ui-templates.html
@@ -12,7 +12,8 @@
     </a>
   </li>
   <li>
-    <a href="#" id="gamepad" class="hidden">
+    <a href="#" id="gamepad" data-bind="css: { hidden: gamepadDisconnected }">
+      <span data-bind="text: gamepadConnected"></span>
       <img id="gamepadPopover" src="themes/OpenROV/img/gamepad.png" rel="popover">
     </a>
   </li>
