--- a/src/plugins/capestatus/public/ui-templates.html
+++ b/src/plugins/capestatus/public/ui-templates.html
@@ -1,14 +1,14 @@
 <script type="text/html" id="template_capestatus_footercontent">
   <div class="span1 pull-left">
     <h6>Connection</h6>
-    <div id="connectionHealth">&nbsp;</div>
+    <div id="connectionHealth" data-bind="css: { connected: isConnected}"></div>
   </div>
   <div class="span2 pull-right">
     <h2 id="formattedRunTime">time</h2>
-    <h4 id="localtime">&nbsp;</h4>
+    <h4 data-bind="text: $data.theLocaltime"></h4>
   </div>
   <div class="span2 pull-right">
-    <h2 id="currentCpuUsage">&nbsp;</h2>
+    <h2 data-bind="text: $data.currentCpuUsage"></h2>
   </div>
   <div class="span2 pull-right">
     <h2 id="currentVoltage">&nbsp;</h2>
