Use template for servo tilt

--- a/src/plugins/capestatus/public/ui-templates.html
+++ b/src/plugins/capestatus/public/ui-templates.html
@@ -18,3 +18,10 @@
     <h2 data-bind="text: $data.currentCurrent"></h2>
   </div>
 </script>
+
+<script type="text/html" id="template_capestatus_servotilt">
+  <img
+    id="servoTiltImage"
+    src="themes/OpenROV/img/servo_tilt.png"
+    data-bind="attr: { style: $data.servoTiltStyle }">
+</script>
