--- a/src/plugins/capestatus/public/settings.html
+++ b/src/plugins/capestatus/public/settings.html
@@ -2,13 +2,12 @@
   <div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#plugin-settings" href="#collapseCapestatus">
-        Capestatus
+        Battery configuration
       </a>
     </div>
     <div id="collapseCapestatus" class="accordion-body collapse">
       <div class="accordion-inner">
         <div>
-          <strong>Battery type:</strong><br>
           <ul data-bind="foreach: batteryTypes" class="unstyled">
             <li>
               <div><input type="radio" name="batteryType" data-bind="value: $data.name, checked: $root.batteryType" /><span data-bind="text: $data.description"></span></div>
