--- a/src/plugins/capestatus/public/settings.html
+++ b/src/plugins/capestatus/public/settings.html
@@ -10,7 +10,9 @@
         <div>
           <ul data-bind="foreach: batteryTypes" class="unstyled">
             <li>
-              <div><input type="radio" name="batteryType" data-bind="value: $data.name, checked: $root.batteryType" /><span data-bind="text: $data.description"></span></div>
+              <div><input type="radio" name="batteryType" data-bind="value: $data.name, checked: $root.batteryType" /><span data-bind="text: $data.description"></span>
+                <i class="icon-remove" data-bind="visible: $root.batteryType() !== $data.name(), click: $parent.removeBattery"></i>
+              </div>
             </li>
           </ul>
           <button data-bind="click: $data.showAddNew, visible: !$data.addNewBatteryVisible()">Add</button>
