Added ElevonControl beta. Plugin manager supports defaultElanbed flag

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -62,6 +62,7 @@ function autoResize(id){
             scripts.push('../plugins/horizon/public/js/horizon.js');
             scripts.push('../plugins/motor_diags/public/js/motor_diags.js');
             scripts.push('../plugins/photocapture/public/js/photocapture.js');
+            scripts.push('../plugins/elevoncontrol/public/js/elevoncontrol.js');
             scripts.push('../plugins/plugin-manager/public/js/config.js');
             scripts.push('../plugins/plugin-manager/public/js/plugin-manager.js');
             scripts.push('../plugins/rovpilot/public/js/rovpilot.js');
