Added ref for textview. Removed debug msg

--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -50,6 +50,7 @@ function autoResize(id){
             // Then the rest of the plugins
             scripts.push('../plugins/arduinofirmwareupload/public/js/arduinofirmwareupload.js');
             scripts.push('../plugins/blackbox/public/js/blackbox.js');
+            scripts.push('../plugins/capestatus/public/js/batteryConfig.js');            
             scripts.push('../plugins/capestatus/public/js/capestatus.js');
             scripts.push('../plugins/compass/public/js/compass.js');
             scripts.push('../plugins/diveprofile/public/js/diveprofile.js');
