--- a/src/static/testviews.html
+++ b/src/static/testviews.html
@@ -76,6 +76,7 @@
             styles.push('../plugins/rovpilot/public/css/style.css');
             styles.push('../plugins/headsup-menu/public/css/style.css');
             styles.push('../plugins/topdowncompass/public/css/topdowncompass.css');
+            styles.push('../system-plugins/plugin-finder/public/css/style.css');
 
             frameDoc.writeln(new EJS({url: '../views/index.ejs'}).render({title: "testing", styles:styles, scripts:scripts}));
             frameDoc.close();
