Github integration is working

--- a/src/system-plugins/plugin-finder/public/settings.html
+++ b/src/system-plugins/plugin-finder/public/settings.html
@@ -8,14 +8,17 @@
         <div id="collapsePluginFinder" class="accordion-body collapse">
             <div class="accordion-inner">
                 <input placeholder="Filter…" type="search" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off">
-                <div class="pre-scrollable" data-bind="loadingWhen: isLoading">
+                <div class="pre-scrollable" data-bind="loadingWhen: isLoading() || isInstalling()">
                 <table class="table table-striped">
                   <tbody data-bind="foreach: availablePlugins">
                     <tr>
                         <td>
-                            <span data-bind="text: name">&nbsp;</span>
-                            <button type="button" class="btn btn-xs btn-default pull-right" data-bind="click: $parent.installPlugin">Install</button>
-                            <button type="button" class="btn btn-xs btn-default pull-right" data-bind="click: $parent.launchPluginDetail">Learn More</button>
+                              <strong><div data-bind="text: name">&nbsp;</div></strong>
+                              <div><span data-bind="text: description">&nbsp;</span> <a target="_blank" data-bind="attr: { href: homepage }">more...</a></div>
+                              <span class="badge" ><span  data-bind="text: raiting"></span> stars</span>
+                        </td>
+                        <td>
+                          <button type="button" class="btn btn-xs btn-default pull-right" data-bind="click: $parent.installPlugin">Install</button>
                         </td>
                     </tr>
                 </tbody>
